k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: html-gitops-eks
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: dev.lynasovann.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: html-gitops-eks
                port:
                  number: 80
